[tool.poetry]
name = "nps_client"
version = "0.1.0"
description = "An API client Python package for National Park Service."
authors = ["yifeitung <yifeidong95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
