[tool.poetry]
name = "nps_client"
version = "0.1.0"
description = "An API client Python package for National Park Service."
authors = ["yifeitung <yifeidong95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
